# dwg2png

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LOG.md  MEASUREMENTS.md  README.md  docker-compose.yml
.github/workflows/: release.yml
probe/: Cargo.toml
probe/src/: main.rs
skill/: README.md  SKILL.md
skill/references/: cli.md  outputs.md  rag.md
skill/scripts/: labels_to_chunks.py
src/: color.rs  lib.rs  main.rs  metadata.rs  model.rs  pages.rs  render.rs  report.rs  tessellate.rs  text.rs
