[workspace]
members = ["probe"]

[package]
name = "dwg2png"
version = "0.1.0"
edition = "2021"
description = "DWG -> multipage PNG renderer and metadata indexer (pure-Rust, acadrust-backed)"
license = "MPL-2.0"

[[bin]]
name = "dwg2png"
path = "src/main.rs"

[dependencies]
# Pinned exactly: early-stage parser, treat as a fixed foundation (see README risk notes).
acadrust = { version = "=0.4.0", features = ["serde"] }
tiny-skia = "0.11"
ab_glyph = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
